--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
         }
 
     </style>
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/nbapp/service-worker.js')
+          .then(() => console.log('Service Worker registrado'))
+          .catch(err => console.error('Error registrando SW:', err));
+      }
+    </script>
 </head>
 <body>
 
