--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
             
             // Reproducir sonido (opcional)
             try {
-                const audio = new Audio('/nbapp/basketball-sound.mp3');
+                const audio = new Audio('/nbapp/ball.mp3');
                 audio.volume = 0.5;
                 audio.play().catch(e => console.log('No se pudo reproducir sonido'));
             } catch (e) {
@@ -549,3 +549,4 @@
 
 </body>
 </html>
+
